--- a/assg3.html
+++ b/assg3.html
@@ -23,22 +23,22 @@
             <div class="row">
                 <div class="col-3">
                     <section class="small-icon">
-                        <img src="./images/car1.jpg" alt="" onclick="showImg(this)">
+                        <img src="images/car1.jpg" alt="" onclick="showImg(this)">
                     </section>
                 </div>
                 <div class="col-3">
                     <section class="small-icon">
-                        <img src="./images/car2.jpg" alt="" onclick="showImg(this)">
+                        <img src="images/car2.jpg" alt="" onclick="showImg(this)">
                     </section>
                 </div>
                 <div class="col-3">
                     <section class="small-icon">
-                        <img src="./images/car3.jpg" alt="" onclick="showImg(this)">
+                        <img src="images/car3.jpg" alt="" onclick="showImg(this)">
                     </section>
                 </div>
                 <div class="col-3">
                     <section class="small-icon">
-                        <img src="./images/car4.jpg" alt="" onclick="showImg(this)">
+                        <img src="images/car4.jpg" alt="" onclick="showImg(this)">
                     </section>
                 </div>
             </div>
